# spiegel_rag_js

./: .gitignore  FEATURES.md  README.md  requirements.txt  test_features.py  test_frontend.html
backend/: .env.example  .flaskenv  model_import.py  pyproject.toml  requirements.txt  run.py  test_llm_models.py
backend/app/: __init__.py
backend/app/api/: config.py  download.py  keywords.py  search.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: embedding_service.py  engine.py  llm_service.py  retrieval_agent.py  vector_store.py
backend/app/core/search/: agent_strategy.py  enhanced_time_window_strategy.py  strategies.py
backend/app/services/: download_service.py  search_service.py  trace_service.py
backend/app/utils/: __init__.py  validation.py
backend/spiegel_rag_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/tests/: conftest.py  test_api.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AnalysisPanel.tsx  Footer.tsx  InfoPanel.tsx  KeywordAnalysisPanel.tsx  ResultsDisplay.tsx  ScoreVisualization.tsx  SearchPanel.tsx  SkeletonLoader.tsx  ThemeRegistry.tsx
frontend/src/lib/: api.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
